[gd_scene load_steps=4 format=3 uid="uid://cg6t4spgk1qw"]

[ext_resource type="Texture2D" uid="uid://bxgii7b0bi06n" path="res://Sprites/airship.png" id="1_32prb"]
[ext_resource type="Script" path="res://Scenes/ingame_hud.gd" id="1_xx4c4"]
[ext_resource type="Texture2D" uid="uid://kfwn1x1744a5" path="res://Sprites/00.png" id="3_4hcvr"]

[node name="IngameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xx4c4")

[node name="1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 56.0
offset_bottom = 39.0
texture = ExtResource("1_32prb")
expand_mode = 1

[node name="2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 112.0
offset_bottom = 39.0
texture = ExtResource("1_32prb")
expand_mode = 1

[node name="3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 120.0
offset_top = 8.0
offset_right = 168.0
offset_bottom = 39.0
texture = ExtResource("1_32prb")
expand_mode = 1

[node name="score" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 104.0
offset_right = 82.0
offset_bottom = 127.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Package1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 48.0
offset_bottom = 88.0
texture = ExtResource("3_4hcvr")
expand_mode = 1

[node name="Package2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 48.0
offset_right = 96.0
offset_bottom = 88.0
texture = ExtResource("3_4hcvr")
expand_mode = 1

[node name="Package3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 48.0
offset_right = 144.0
offset_bottom = 88.0
texture = ExtResource("3_4hcvr")
expand_mode = 1

[node name="Package4" type="TextureRect" parent="."]
modulate = Color(0.968627, 0.443137, 0.392157, 1)
layout_mode = 0
offset_left = 152.0
offset_top = 48.0
offset_right = 192.0
offset_bottom = 88.0
texture = ExtResource("3_4hcvr")
expand_mode = 1

[node name="Package5" type="TextureRect" parent="."]
modulate = Color(0.878431, 0, 0.196078, 1)
layout_mode = 0
offset_left = 200.0
offset_top = 48.0
offset_right = 240.0
offset_bottom = 88.0
texture = ExtResource("3_4hcvr")
expand_mode = 1
